# jacdac-c

./: .gitmodules  CMakeLists.txt  README.md
click/: airquality4.h  airquality4_glue.c  color.c  color.h  color_glue.c  tts.c  tts.h  tts_glue.c  tts_hal.c  tts_hal.h  tts_hw.c  tts_hw.h  tts_image.h
client/: README.md  client_internal.h  hclient.c  rolemgr.c  routing.c  thr_pthread.c
dcfg/: deviceconfig-generated.schema.json  deviceconfig.schema.json  regen.sh  srvcfg.d.ts
drivers/: ads1115.c  aw86224fcr.c  cap1298.c  cps122.c  da213b.c  dps310.c  ds18b20.c  i2c_helpers.c  i2c_scan.c  kx023.c  kxtj3.c  lps33hwtr.c  lsm6ds.c  ltr390uv.c  max31855.c  max6675.c  mcp41010.c  mpl3115a2.c  ncv7726b.c  ncv7726b_daisy.c  qma7981.c  scd40.c  sgp30.c  sgpc3.c  sht30.c  shtc3.c  spiflash.c  th02.c
from-tiny/: acc.c  btn.c  crank.c  crc.c  ctrl.c  frame.c  gamepad.c  host.c  host.h  humidity.c  jdapp.c  jdconsole.c  jdprofile.h  jdservices.h  jdsimple.h  light.c  main.c  oled.c  power.c  pwm_light.c  sensor.c  services.h  servo.c  slider.c  snd.c  temp.c  touch.c
implementation/: app_dummy.c  hw_dummy.c  jd_dummy.c  sensor.c  simple_alloc.c  simple_routing.c  simple_rx.c  tx_queue.c
inc/: jd_client.h  jd_config.h  jd_control.h  jd_dcfg.h  jd_dmesg.h  jd_drivers.h  jd_hclient.h  jd_io.h  jd_numfmt.h  jd_physical.h  jd_pipes.h  jd_protocol.h  jd_service_classes.h  jd_service_framework.h  jd_services.h  jd_srvcfg.h  jd_thr.h  jd_util.h  txq.h
scripts/: decode_multitouch_history.js  ds-builtin-proto.js  git-version.sh  map-file-stats.js
services/: acc.c  accelerometer.c  (+80 more)
(+72 files in other folders)
